Jann 30/objects/Deal_Phase__c.object
<CustomObject>
    <description>where the Deal phase is kept</description>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Phases</relationshipLabel>
        <relationshipName>Deal_Phases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Optional_Attachment__c</fullName>
        <label>Optional Attachment</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Team Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment of Gov&apos;t &amp; PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-Trust &amp; REsolution Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR &amp; Communication Plan (PAC/iR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Research Footnotes/Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target/Strategic Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phase_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phase Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1: Strategy &amp; Objectives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2: Evaluation of Target &amp; Business Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3: Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4: Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 5: Regulatory Approvals &amp; Pre-Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 6: Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 7: Integration &amp; Learnings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Attachments__c</fullName>
        <label>Required Attachments</label>
        <picklist>
            <controllingField>Phase__c</controllingField>
            <picklistValues>
                <fullName>Authorization to Investigate (ATI/A&amp;D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidentiality Agreement(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement Letters/SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFA for 3rd Party Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Definitive Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Transaction Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Transaction Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Impairment Testing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Deal Phase</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Deal Phase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>